<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/colorPrimary"
    tools:layout_editor_absoluteY="25dp">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp">


        <EditText
            android:id="@+id/name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"


            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="?attr/actionBarSize"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="154dp" />

        <EditText
            android:id="@+id/emailid"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:layout_below="@+id/name"
            android:layout_centerHorizontal="true"


            android:hint="@string/email_id"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:layout_below="@+id/emailid"
            android:layout_centerHorizontal="true"


            android:hint="@string/phone_no"
            android:inputType="phone" />

        <EditText
            android:id="@+id/psswd"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:layout_below="@+id/phone"
            android:layout_centerHorizontal="true"


            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/retypepasswd"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:layout_below="@+id/psswd"
            android:layout_centerHorizontal="true"

            android:hint="@string/retype "
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"


            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="66dp"
            android:background="@drawable/shape"
            android:text="@string/reg"
            android:textColor="@android:color/background_light" />


    </RelativeLayout>





</android.support.constraint.ConstraintLayout>